# osml-tile-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  setup.cfg  tox.ini
.github/actions/generate-deployment-json/: action.yml
.github/actions/setup-aws-oidc/: action.yml
.github/actions/setup-cdk/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-test-destroy.yml  build.yml  check-pending-workflow.yml  deploy.yml  destroy.yml  docker.yml  notify.yml  pre-commit.yml  release.yml  run-integration-tests.yml  slack-norify-pr.yml  slack-notify-nightly-failure.yml  tox.yml
.kiro/specs/cdk-nag-compliance/: design.md  requirements.md  tasks.md
.kiro/steering/: code-conventions.md  infrastructure.md  project-structure.md  testing-guidelines.md
cdk/: .npmrc  .prettierignore  README.md  cdk.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: network-stack.ts  test-stack.ts  tile-server-stack.ts
cdk/lib/constructs/: types.ts
cdk/lib/constructs/test/: imagery.ts  lambda-roles.ts  test.ts
cdk/lib/constructs/tile-server/: database.ts  dataplane.ts  ecs-roles.ts  ecs-service.ts  lambda_role.ts  messaging.ts  network.ts  storage.ts
cdk/test/: load-deployment.test.ts  test-account.ts  test-types.ts  test-utils.ts
cdk/test/constructs/tile-server/: database.test.ts  dataplane.test.ts  ecs-roles.test.ts  ecs-service.test.ts  messaging.test.ts  network.test.ts  storage.test.ts
conda/: environment.test.yml  environment.yml  tile-server.yml
docker/: Dockerfile.integ  Dockerfile.load  Dockerfile.tile_server  docker-compose.integ.yml
scripts/: destroy.sh  tile_server_integ.sh
src/aws/osml/tile_server/: app_config.py  main.py  models.py
src/aws/osml/tile_server/services/: __init__.py  database.py  tile_provider.py
src/aws/osml/tile_server/utils/: tile_server_utils.py
src/aws/osml/tile_server/viewpoint/: router.py  worker.py
src/aws/osml/tile_server/viewpoint/viewpoint_id/: router.py
src/aws/osml/tile_server/viewpoint/viewpoint_id/image/: statistics.py  tiles.py
src/aws/osml/tile_server/viewpoint/viewpoint_id/map/tileset/: tile.py
test/: __init__.py  integ_processor.py  load_processor.py  processor_base.py
test-load/: README.md
test/aws/osml/tile_server/: test_main.py
test/aws/osml/tile_server/services/: test_database.py  test_queue.py  test_tile_provider.py
test/aws/osml/tile_server/viewpoint/: test_router.py  test_worker.py
test/integration/: __init__.py  test_assertions.py  test_config.py  test_tile_server.py
test/integration/endpoints/: __init__.py  test_create_viewpoint.py  test_delete_viewpoint.py  test_describe_viewpoint.py  test_get_bounds.py  test_get_crop.py  test_get_info.py  test_get_map_tile.py  test_get_metadata.py  test_get_preview.py  test_get_statistics.py  test_get_tile.py  test_list_viewpoints.py  test_update_viewpoint.py
test/load/: __init__.py  load_test.py  locust_ts_user.py
test/utils/: __init__.py  logger.py  s3_url.py
