[metadata]
name = osml-tile-server
version = 1.0.0rc1
description = The OversightML Tile Server is a lightweight, cloud-based tile server which allows you to quickly pass an image from S3 bucket to get metadata, image statistics, and set of tiles in real-time.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license = Apache-2.0
project_urls =
    Source = https://github.com/aws-solutions-library-samples/osml-tile-server
    Tracker = https://github.com/aws-solutions-library-samples/osml-tile-server/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.11
include_package_data = True

install_requires =
    uvicorn==0.31.1
    fastapi==0.115.14
    fastapi-versioning==0.10.0
    asgi-correlation-id==4.3.4
    cryptography==43.0.3
    boto3==1.42.6
    geojson==3.1.0
    python-json-logger==2.0.7
    osml-imagery-toolkit>=1.4.0
    numpy==2.3.5
    opencv-python-headless>=4.10.0.0,<4.13.0.0;python_version<'3.13'
    opencv-python-headless>=4.13.0.90,<5.0.0;python_version>='3.13'

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
test =
    tox
    requests==2.32.4
    locust==2.42.6
    boto3==1.42.6
    python-json-logger==2.0.7
    awslambdaric==3.1.1
